# squirtle

./: Cargo.toml  README.md
data/: websters.json  wordle.json
src/: main.rs
