[package]
name = "squirtle"
version = "0.1.0"
edition = "2021"
description = "A CLI for playing the wordle"
repository = "https://github.com/szunami/squirtle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"